# importlib_metadata

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGES.rst  LICENSE  MANIFEST.in  NEWS.rst  README.rst  conftest.py  coverage.ini  exercises.ini  exercises.py  mypy.ini  pyproject.toml  pytest.ini  release.sh  ruff.toml  setup.cfg  setup.py  tox.ini  version.py
.github/: FUNDING.yml
.github/workflows/: main.yml  test-suite.yml
Lib/importlib/: _bootstrap_external.py  metadata.py
Lib/importlib/metadata/: __init__.py  _hooks.py  abc.py  api.py
Lib/test/test_importlib/: fixtures.py  test_api.py  test_main.py  test_metadata_api.py  test_zip.py
Lib/tests/test_importlib/: test_main.py  test_zip.py
docs/: api.rst  changelog.rst  conf.py  index.rst  migration.rst  using.rst
importlib_metadata/: __init__.py  _adapters.py  _collections.py  _common.py  _compat.py  _functools.py  _hooks.py  _itertools.py  _meta.py  _py2.py  _py3.py  _py39compat.py  _text.py  abc.py  api.py
importlib_metadata/_compat/: __init__.py  localize.py
importlib_metadata/compat/: py311.py  py38.py  py39.py  stdlib.py
importlib_metadata/docs/: changelog.rst  changelog_BACKUP_22277.rst  changelog_BASE_22277.rst  changelog_LOCAL_22277.rst  conf.py  index.rst  using.rst
importlib_metadata/tests/: fixtures.py  test_api.py  test_integration.py  test_main.py  test_zip.py
newsfragments/: +.bugfix.rst  +.feature.rst  +.removal.rst  +29a322e3.feature.rst  +530.feature.rst  +76d2542b.feature.rst  +8256a9d7.removal.rst  +9c754ffa.removal.rst  +b15724f6.bugfix.rst  +bd6aec5a.bugfix.rst  +d7832466.feature.rst  +e563b690.bugfix.rst  +e6755131.feature.rst  +f9f493e6.feature.rst  371.removal.rst  404.feature.rst  455.bugfix.rst  461.feature.rst  473.feature.rst  484.bugfix.rst  486.feature.rst  486.removal.rst  489.feature.rst  493.feature.rst  494.feature.rst  499.feature.rst  502.feature.rst  503.feature.rst  510.feature.rst  518.bugfix.rst  532.removal.rst  542.bugfix.rst
prepare/example/: setup.py
prepare/example/example/: __init__.py
prepare/example2/example2/: __init__.py
tests/: _path.py  fixtures.py  identity.py  py39compat.py  test_api.py  test_integration.py  test_main.py  test_meta.py  test_protocols.py  test_py39compat.py  test_zip.py
tests/compat/: py312.py  py314.py  py39.py  test_py39_compat.py
