[build-system]
requires = [
	"setuptools>=77",
	"setuptools_scm[toml]>=3.4.1",
	# jaraco/skeleton#174
	"coherent.licensed",
]
build-backend = "setuptools.build_meta"

[project]
name = "importlib_metadata"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Read metadata from Python packages"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
	"zipp>=3.20",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/python/importlib_metadata"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	"packaging",
	"pyfakefs",
	"pytest-perf >= 0.9.2",
	"jaraco.test >= 5.4",
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# tidelift
	"jaraco.tidelift >= 1.4",

	# local
]
perf = ["ipython"]

check = [
	"pytest-checkdocs >= 2.14",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 3.4",
]

type = [
	# upstream
	
    # Exclude PyPy from type checks (python/mypy#20454 jaraco/skeleton#187)
	"pytest-mypy >= 1.0.1; platform_python_implementation != 'PyPy'",

	# local
]


[tool.setuptools_scm]
