[metadata]
license_file = LICENSE
name = importlib_metadata
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Read metadata from Python packages
long_description = file:README.rst
url = https://github.com/python/importlib_metadata
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    zipp>=0.5
    typing-extensions>=3.6.4; python_version < "3.8"
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
    tests*
    docs

[options.extras_require]
testing =
    # upstream
    pytest >= 3.5, !=3.7.3
    pytest-checkdocs >= 1.2.3
    pytest-flake8
    pytest-black >= 0.3.7; python_implementation != "PyPy"
    pytest-cov
    pytest-mypy; python_implementation != "PyPy"
    # jaraco/skeleton#22
    jaraco.test >= 3.2.0

    # local
    importlib_resources>=1.3; python_version < "3.9"
    packaging
    pep517
    pyfakefs
    flufl.flake8

docs =
    # upstream
    sphinx
    jaraco.packaging >= 3.2
    rst.linker >= 1.9

    # local

[options.entry_points]
