[metadata]
name = importlib_metadata
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Read metadata from Python packages
long_description = file:README.rst
url = https://github.com/python/importlib_metadata
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	zipp>=0.5
	typing-extensions>=3.6.4; python_version < "3.8"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
	prepare*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8; \
		# workaround for tholo/pytest-flake8#87
		python_version < "3.12"
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	importlib_resources>=1.3; python_version < "3.9"
	packaging
	pyfakefs
	flufl.flake8
	pytest-perf >= 0.9.2

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

perf =
	ipython

[options.entry_points]
