[metadata]
name = importlib_metadata
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Read metadata from Python packages
long_description = file:README.rst
url = https://github.com/python/importlib_metadata
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	zipp>=0.5
	typing-extensions>=3.6.4; python_version < "3.8"

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	importlib_resources>=1.3; python_version < "3.9"
	packaging
	pyfakefs
	flufl.flake8
	pytest-perf >= 0.9.2
	jaraco.test >= 5.4

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

perf =
	ipython

[options.entry_points]
